--- a/src/pages/article-info/article-info.scss
+++ b/src/pages/article-info/article-info.scss
@@ -1,4 +1,7 @@
 page-article-info {
+    video{
+        width:100%;
+    }
     .acticle-scroll {
         border-bottom: 1px solid #F5F5F5;
         //overflow: hidden;
