--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,7 @@
 page-home {
+    .tabbar{
+        background-color: #fff!important;
+    }
     .slide-wrap {
         height: 300px;
         //ion-card {
