--- a/src/pages/getlike/getlike.scss
+++ b/src/pages/getlike/getlike.scss
@@ -12,10 +12,19 @@ page-getlike {
         word-break: break-all;
     }
     .contentName {
-        color: #3E91C4;
+        color: rgb(104, 102, 102);
+    }
+    .contenttip{
+        color:  rgb(151, 147, 147);
     }
     .contentTitle {
-        color: #3E91C4;
+        color: rgb(121, 118, 118);
+        font-size: 15px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        width: 250px;
+        display: inline-block;
     }
     .timeText {
         color: #9D9D9D;
