--- a/src/pages/article-info/article-info.scss
+++ b/src/pages/article-info/article-info.scss
@@ -2,6 +2,24 @@ page-article-info {
     video{
         width:100%;
     }
+    .commentWrap{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    .commentImg{
+        width: 25px;
+    }
+    .zanImg{
+        width: 28px;
+    }
+    .zanNum{
+        font-size: 14px;
+        color: #8C8C8C;
+        position: absolute;
+        bottom: 25px;
+        right: 6px;
+    }
     .acticle-scroll {
         border-bottom: 1px solid #F5F5F5;
         //overflow: hidden;
