--- a/src/pages/record-info/record-info.scss
+++ b/src/pages/record-info/record-info.scss
@@ -107,7 +107,8 @@ page-record-info {
         font-size: 12px;
     }
     .acticle-reply {
-        padding: 8px;
+        padding: 20px;
+        background-color: #fff;
     }
     .reply-user {
         display: flex;
@@ -121,15 +122,67 @@ page-record-info {
         line-height: 50px;
         vertical-align: middle;
     }
+    .reply-head .friend {
+        width: 35px;
+        height: 15px;
+        color: #F5ADAD;
+        border: 1px solid #F5ADAD;
+        line-height: 15px;
+        font-size: 12px;
+        text-align: center;
+        border-radius: 3px;
+        margin: 0;
+        margin-top: 8px;
+        margin-left: 10px;
+    }
     .reply-head-img {
         margin-right: 10px;
-        width: 50px;
-        height: 50px;
-        border-radius: 10%;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
         overflow: hidden
     }
     .reply-info {
         flex: 1;
+    }
+    .reply-info .name {
+        font-size: 14px;
+        height: 14px;
+        line-height: 14px;
+        margin-top: 9px;
+        color: #707070;
+    }
+    .reply-info .time {
+        font-size: 12px;
+        height: 12px;
+        line-height: 12px;
+        color: #DBDBDB;
+        margin: 0;
+        margin-top: 5px;
+    }
+    .replycontent {
+        color: #9B9B9B;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .commentWrap {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    .commentImg {
+        width: 17px;
+    }
+    .zanImg {
+        width: 18px;
+        margin-left: 10px;
+    }
+    .zanNum {
+        font-size: 14px;
+        color: #8C8C8C;
+        position: absolute;
+        bottom: 25px;
+        right: 6px;
     }
     .reply-pp {
         margin-top: 5px;
