--- a/src/components/comment/comment-attachments.html
+++ b/src/components/comment/comment-attachments.html
@@ -4,7 +4,7 @@
             <ion-col col-6 class="big-box" *ngFor="let item of attachments">
                 <ion-thumbnail item-start class="">
                     <div class="content">
-                        <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}">
+                        <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}" (click)="showBigImg(item)">
                         <!--<div *ngIf="!item?.url" class="avatar">-->
                         <!--<img src="../../assets/img/appicon.png" />-->
                         <!--</div>-->
@@ -19,7 +19,7 @@
                         <ion-col col-6 class="big-box" *ngFor="let item of attachments">
                             <ion-thumbnail item-start>
                                 <div class="content">
-                                    <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}">
+                                    <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}" (click)="showBigImg(item)">
                                     <!--<div *ngIf="item?.url" class="avatar">-->
                                     <!--<img src="../../assets/img/appicon.png" />-->
                                     <!--</div>-->
@@ -38,10 +38,13 @@
             <div *ngIf="!item?.url" class="avatar">
               <img src="../../assets/img/appicon.png"/>
             </div> -->
-                        <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}">
+                        <img class="image-box" [ngStyle]="{'background-image': 'url(' + item + ')'}" (click)="showBigImg(item)">
                     </div>
                 </ion-thumbnail>
             </ion-col>
         </ion-row>
     </ng-container>
 </ion-grid>
+<div *ngIf="bigImgShow" style="position: fixed;top: 0;left: 0;z-index: 10; width: 100%;height: 100%;background-color: rgba(0,0,0,0.5);" (click)="hideBigImage()">
+    <img style="position: absolute;top: 50%;left: 50%;z-index: 10;display: inline-block;width: 90%;transform: translate(-50%,-50%);" [src]="bigImgUrl" />
+</div>
