--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,34 @@
 page-home {
+    ion-segment {
+        display: block;
+        white-space: nowrap;
+        font-size: 0;
+        overflow: auto;
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+            display: none;
+        }
+        ion-segment-button.segment-button {
+            display: inline-block;
+            min-width: 90px;
+            width: auto;
+        }
+        .tabText {
+            font-size: 18px!important;
+            color: #C7716B!important;
+        }
+        ion-segment-button.segment-button.segment-activated {
+            border-color: #C7716B!important;
+        }
+    }
+    .segment-md .segment-button {
+        border-bottom-color: #fff;
+    }
+    .slide-zoom{
+        text-align: left;
+    }
+    
     .tabbar{
         background-color: #fff!important;
     }
