--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -27,6 +27,8 @@ page-home {
     }
     .slide-zoom{
         text-align: left;
+        overflow-y: scroll;
+        height: 100%;
     }
     
     .tabbar{
