--- a/src/pages/home/diary/diary.scss
+++ b/src/pages/home/diary/diary.scss
@@ -1,3 +1,98 @@
 diary {
-  
+    .titleWrap {
+        overflow: hidden;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 100%;
+    }
+    .avatarWrap {
+        float: left;
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        display: inline-block;
+        overflow: hidden;
+    }
+    .name {
+        float: left;
+        font-size: 14px;
+        color: #A1A1A1;
+        margin-top: 9px;
+        margin-left: 10px;
+    }
+    .time {
+        float: right;
+        font-size: 13px;
+        color: #A1A1A1;
+        margin-top: 9px;
+    }
+    .contentWrap {
+        overflow: hidden;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 10px;
+    }
+    .title {
+        font-size: 15px;
+        color: #9C9C9C;
+    }
+    .content {
+        font-size: 13px;
+        color: #A1A1A1;
+        margin-top: 5px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+    .dataWrap {
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 10px;
+    }
+    .fireImg {
+        width: 15px;
+        height: 18px;
+        vertical-align: middle;
+    }
+    .fireText {
+        color: #A1A1A1;
+        font-size: 12px;
+        margin-left: 2px;
+        vertical-align: middle;
+    }
+    .collectImg {
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+    }
+    .collectText {
+        color: #A1A1A1;
+        font-size: 12px;
+        margin-left: 2px;
+        vertical-align: middle;
+    }
+    .commentImg {
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+    }
+    .commentText {
+        color: #A1A1A1;
+        font-size: 12px;
+        margin-left: 2px;
+        margin-right: 10px;
+        vertical-align: middle;
+    }
+    .zanImg {
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+    }
+    .zanText {
+        color: #A1A1A1;
+        font-size: 12px;
+        margin-left: 2px;
+        margin-right: 10px;
+        vertical-align: middle;
+    }
 }
