--- a/src/components/comment/comment-attachments.html
+++ b/src/components/comment/comment-attachments.html
@@ -1,6 +1,6 @@
 <ion-grid id="ss-comment-attachments" class="con-grid">
     <ng-container [ngSwitch]="attachments?.length">
-        <ion-row *ngSwitchCase="1">
+        <ion-row *ngSwitchCase="1" style="padding-left:15px;padding-right: 8px;">
             <ion-col col-6 class="big-box" *ngFor="let item of attachments">
                 <ion-thumbnail item-start class="">
                     <div class="content">
@@ -12,7 +12,7 @@
                 </ion-thumbnail>
             </ion-col>
         </ion-row>
-        <ion-row *ngSwitchCase="4">
+        <ion-row *ngSwitchCase="4" style="padding-left:15px;padding-right: 8px;">
             <ion-col col-8 style="padding: 0">
                 <ion-grid style="padding: 0">
                     <ion-row>
@@ -30,7 +30,7 @@
                 </ion-grid>
             </ion-col>
         </ion-row>
-        <ion-row *ngSwitchDefault>
+        <ion-row *ngSwitchDefault style="padding-left:15px;padding-right: 8px;">
             <ion-col col-4 class="big-box" *ngFor="let item of attachments">
                 <ion-thumbnail item-start class="">
                     <div class="content">
