--- a/src/pages/home/diary/diary.scss
+++ b/src/pages/home/diary/diary.scss
@@ -34,20 +34,26 @@ diary {
     }
     .title {
         font-size: 15px;
-        color: #9C9C9C;
+        color: #565656;
+        margin:0;
     }
     .content {
         font-size: 13px;
         color: #A1A1A1;
-        margin-top: 5px;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin: 0;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
     .dataWrap {
-        padding-left: 15px;
-        padding-right: 15px;
-        margin-top: 10px;
+        margin-left: 15px;
+        margin-right: 15px;
+        overflow: hidden;
+        border-bottom: 1px solid #DADADA;
+        padding-bottom: 10px;
     }
     .fireImg {
         width: 15px;
@@ -94,5 +100,7 @@ diary {
         margin-left: 2px;
         margin-right: 10px;
         vertical-align: middle;
+    }
+    .imgsWrap{
     }
 }
