--- a/src/pages/diary/publish-diary.scss
+++ b/src/pages/diary/publish-diary.scss
@@ -2,6 +2,7 @@ page-publish-diary {
     .big-box {
         position: relative;
         background-color: #fff;
+        height: 100px;
         &:before {
             content: "";
             display: block;
@@ -21,7 +22,13 @@ page-publish-diary {
         width: 100%;
         height: 100%;
         background-size: cover;
-        background-position: 50% 50%
+        background-position: 50% 50%;
+    }
+    .avatar{
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: 50% 50%;
     }
     .logo {
         padding: 20px 0;
@@ -35,7 +42,7 @@ page-publish-diary {
         margin-bottom: 0;
     }
     .diary-content {
-        height: 200px;
+        min-height: 150px;
         textarea {
             height: 180px;
         }
@@ -46,5 +53,8 @@ page-publish-diary {
         margin: 0;
         font-size: 25px;
         color: #999;
+    }
+    .item-inner{
+        border-bottom: 0!important;
     }
 }
