--- a/src/pages/diarymark/diarymark.scss
+++ b/src/pages/diarymark/diarymark.scss
@@ -1,3 +1,27 @@
 page-diarymark {
-    
+    .title{
+    	font-size: 13px;
+    	color: #C2C2C2;
+    	margin: 0;
+    }
+    .mymark{
+    	font-size: 16px;
+    	color: #A6A6A6;
+    	display: inline-block;
+    	margin-right: 15px;
+    	margin-bottom: 10px;
+    }
+    .canselectmark{
+    	font-size: 14px;
+    	display: inline-block;
+    	color: #A7A7A7;
+    	border:1px solid #ABABAB;
+    	border-radius: 3px;
+    	padding: 4px 8px;
+    	margin-right: 15px;
+    	margin-bottom: 10px;
+    }
+    .selectedmark{
+    	
+    }
 }
