--- a/src/pages/article-info/article-info.scss
+++ b/src/pages/article-info/article-info.scss
@@ -158,4 +158,7 @@ page-article-info {
         font-size: 24px;
         color: #FF1A36;
     }
+    .back-button {
+        display: block!important;
+    }
 }
