--- a/src/pages/topic/topic.scss
+++ b/src/pages/topic/topic.scss
@@ -16,4 +16,7 @@ page-topic {
         color: #A3A3A3;
         border-bottom: 2px solid #CACACA;
     }
+    .back-button {
+        display: block!important;
+    }
 }
