--- a/src/pages/diaryarticle/diaryarticle.scss
+++ b/src/pages/diaryarticle/diaryarticle.scss
@@ -5,4 +5,7 @@ page-diaryarticle {
     .item-md.item-block .item-inner{
         border-bottom: 0!important;
     }
+    .back-button{
+        display: block!important;
+    }
 }
