--- a/src/pages/diarymark/diarymark.scss
+++ b/src/pages/diarymark/diarymark.scss
@@ -17,11 +17,19 @@ page-diarymark {
     	color: #A7A7A7;
     	border:1px solid #ABABAB;
     	border-radius: 3px;
-    	padding: 4px 8px;
+    	padding: 6px 14px;
     	margin-right: 15px;
     	margin-bottom: 10px;
     }
     .selectedmark{
-    	
-    }
+    	color: #E28885;
+	}
+	.back-button{
+		display: block;
+	}
+	.canselectmarkselected{
+		background: #EE7A79;
+		border: 1px solid #EE7A79;
+		color: #fff;
+	}
 }
